Remove diagnostics, hardware libraries, and personal config; update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 **/__pycache__/
 *.pyc
+
+# Diagnostics logs
+diagnostics/
+
+# Personal configuration
+profiles.yaml
+
+# Hardware libraries
+toupcam.dll
+toupcam.lib
